examples/test/testpolicy13000.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13000
  namespace: namespace445
spec:
  podSelector:
    matchLabels:
      key6: value6
      key43: value35
      key0: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value19
          key21: value22
          key31: value36
      podSelector:
        matchLabels:
          key48: value9
          key28: value41
